story #9200: Fix dropdown projects scroll on Firefox

--- a/src/www/themes/BurningParrot/css/includes/_navbar-dropdown-projects.scss
+++ b/src/www/themes/BurningParrot/css/includes/_navbar-dropdown-projects.scss
@@ -2,6 +2,7 @@ $nav-dropdown-content-projects-content-padding: 10px 20px;
 $nav-dropdown-content-border: 1px solid $tlp-ui-border-dark;
 
 #nav-dropdown-content-projects-filter-projects {
+    width: auto;
     margin: 0 $tlp-spacing 0 0;
 }
 
